<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_bg_login"
    tools:context=".ui.login.LoginActivity">


    <ImageView
        android:id="@+id/iv_company_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_company_logo"
        android:layout_marginTop="32dp"
        android:layout_width="200dp"
        android:layout_height="150dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_username"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/text_hint_username"
        app:layout_constraintTop_toBottomOf="@id/iv_company_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/et_username"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/text_hint_password"
        android:layout_marginTop="8dp"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/til_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/et_password"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@id/til_password"
        android:text="@string/text_btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/ll_fb_login_button"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ll_google_login_button"
        android:layout_width="0dp"
        android:padding="8dp"
        android:clickable="true"
        android:gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        android:background="@drawable/bg_button_sso"
        android:layout_height="wrap_content"
        android:focusable="true">


        <ImageView
            android:id="@+id/iv_login_fb"
            android:src="@drawable/ic_facebook"
            android:layout_width="25dp"
            android:layout_height="25dp" />

        <TextView
            android:id="@+id/tv_login_fb"
            android:ellipsize="end"
            android:textAlignment="center"
            android:layout_marginStart="8dp"
            android:text="@string/text_login_with_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_google_login_button"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@id/ll_fb_login_button"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:padding="8dp"
        android:clickable="true"
        android:gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        android:background="@drawable/bg_button_sso"
        android:layout_height="wrap_content"
        android:focusable="true">

        <ImageView
            android:id="@+id/iv_login_google"
            android:src="@drawable/ic_gmail"
            android:layout_width="25dp"
            android:layout_height="25dp" />

        <TextView
            android:id="@+id/tv_login_google"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_marginStart="8dp"
            android:textAlignment="center"
            android:text="@string/text_login_with_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>